--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -20,6 +20,8 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #051836;
+  font-family: "Roboto", sans-serif;
+  background-color: #fafafa;
 }
 
 a {
